<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#191919"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:text="@string/my_vault"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/u"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/circle_background"
            android:layout_margin="3dp"
            android:id="@+id/tvUserName"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/search_24px"
            android:backgroundTint="#00FFFFFF"
            app:tint="@color/white"
            android:layout_margin="3dp"
            android:contentDescription="@string/search" />
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/more_vert_24px"
            android:backgroundTint="#00FFFFFF"
            app:tint="@color/white"
            android:layout_margin="3dp"
            android:contentDescription="@string/more" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#2C2C2C"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:text="@string/types"
                android:textSize="25sp"
                android:textColor="#03A9F4"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/_4"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#8F8B8B"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/llLogin">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/globe_asia_24px"
                app:tint="#8F8B8B" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#8F8B8B"
                android:id="@+id/tvItemCount"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/credit_card_24px"
                app:tint="#8F8B8B" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/card"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#8F8B8B"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/id_card_24px"
                app:tint="#8F8B8B" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/identity"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#8F8B8B"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/note_stack_24px"
                app:tint="#8F8B8B" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/secure_notes"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#8F8B8B"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:text="Folders"
                android:textSize="25sp"
                android:textColor="#03A9F4"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#8F8B8B"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/folder_24px"
                app:tint="#8F8B8B" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/no_folder"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#8F8B8B"
                android:id="@id/tvItemCount"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"
                android:text="Bin"
                android:textSize="25sp"
                android:textColor="#03A9F4"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#8F8B8B"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/LLBin">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/delete_24px"
                app:tint="#8F8B8B" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/bin"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#8F8B8B"
                android:id="@+id/tvBinCount"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                style="@style/RoundFloatingActionButton"
                android:backgroundTint="#2EA8DF"
                android:contentDescription="@string/add_data"
                android:src="@drawable/add_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#191919"
        android:padding="5dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/lock_24px"
                app:tint="#03A9F4"
                android:contentDescription="@string/lock" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_vault"
                android:textColor="#03A9F4"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/send_24px"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/autorenew_24px"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Generator"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_24px"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>